alteracao para compatibilidade com java 8